feat: establish the 1.20.1 multi-loader port
Port the canonical Fabric implementation to 1.20.1, add Stonecutter Common/Fabric/Forge lanes and the full version roadmap, capture isolated baseline and packaged E2E evidence, and establish a fail-closed Forge storage-core progression gate.