@@ -6,7 +6,6 @@ import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
-import net.minecraft.recipe.RecipeEntry;
 import net.minecraft.util.Identifier;
 import ru.feytox.etherology.client.compat.emi.EtherEMIPlugin;
 import ru.feytox.etherology.client.compat.emi.misc.EmiUtil;
@@ -24,15 +23,14 @@ public class EmpowerERecipe extends FeyEmiRecipe {
         super(inputs, outputs, id);
     }
 
-    public static EmpowerERecipe of(RecipeEntry<EmpowerRecipe> entry) {
-        EmpowerRecipe recipe = entry.value();
+    public static EmpowerERecipe of(EmpowerRecipe recipe) {
         List<EmiIngredient> inputs = recipe.getPattern().ingredients().stream().map(EmiIngredient::of).collect(Collectors.toCollection(ObjectArrayList::new));
         inputs.add(EmiUtil.ofEmpty(EItems.PRIMOSHARD_RELLA, recipe.getRellaCount()));
         inputs.add(EmiUtil.ofEmpty(EItems.PRIMOSHARD_VIA, recipe.getViaCount()));
         inputs.add(EmiUtil.ofEmpty(EItems.PRIMOSHARD_CLOS, recipe.getClosCount()));
         inputs.add(EmiUtil.ofEmpty(EItems.PRIMOSHARD_KETA, recipe.getKetaCount()));
         List<EmiStack> outputs = Collections.singletonList(EmiStack.of(recipe.getOutput()));
-        return new EmpowerERecipe(inputs, outputs, entry.id());
+        return new EmpowerERecipe(inputs, outputs, recipe.getId());
     }
 
     @Override
@@ -66,6 +64,6 @@ public class EmpowerERecipe extends FeyEmiRecipe {
         widgets.addSlot(inputs.get(11), 1, 41);
         widgets.addSlot(inputs.get(12), 41, 41);
 
-        widgets.addSlot(outputs.getFirst(), 95, 17).large(true).recipeContext(this);
+        widgets.addSlot(outputs.get(0), 95, 17).large(true).recipeContext(this);
     }
 }
